@@ -1,3 +1,8 @@
+2007-10-11  Don Allingham  <don@gramps-project.org>
+	* src/gen/db/base.py:
+	* src/GrampsDb_GrampsDbWriteXML.py:
+	* src/gen/db/__init__.py: fix callback call
+
 2007-10-10 Duarte Loreto <happyguy_pt@hotmail.com>
 	* src/DateHandler/_Date_pt.py: portugese datehandler accompanying translation
 	* po/POTFILES.in: new file in POTFILE
